TestService and TestServiceImpl improvements