@@ -8,14 +8,12 @@ import com.example.csmSystem.service.exceptions.ResourceNotFoundException;
 import com.example.csmSystem.service.mapper.TestMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -28,29 +26,34 @@ public class TestServiceImpl implements TestService {
     @Override
     public TestDto createTest(TestDto testDto) {
         log.info("Creating new Test {}, and saving it in the DB", testDto.getName());
+
         if (testClassRepository.findTestByName(testDto.getName()).isPresent())
             throw new NameAlreadyExistException("Name already exists in the DB");
+
         return TestMapper.MAPPER.mapToTestDto(testClassRepository.save(TestMapper.MAPPER.mapToTest(testDto)));
     }
 
     @Override
     public TestDto findTestById(UUID id) {
-        log.info("Getting Test from the DB by id = {}", id);
+        log.info("Finding Test from the DB by id = {}", id);
+
         return TestMapper.MAPPER.mapToTestDto(testClassRepository.findById(id).orElseThrow(
                 () -> new ResourceNotFoundException("Test", "id", id)));
     }
 
     @Override
     public List<TestDto> findAllTests() {
-        log.info("Get all test from the DB");
+        log.info("Find all test from the DB");
+
         return testClassRepository.findAll().stream()
                 .map(TestMapper.MAPPER::mapToTestDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public TestDto updateTest(TestDto testDto) {
         log.info("Updating Test by test id = {}", testDto.getId());
+
         return TestMapper.MAPPER.mapToTestDto(testClassRepository.save(testClassRepository.findById(testDto.getId()).orElseThrow(
                 () -> new ResourceNotFoundException("Test", "id", testDto.getId()))));
     }
@@ -58,74 +61,98 @@ public class TestServiceImpl implements TestService {
     @Override
     public TestDto deleteTest(UUID id) {
         log.info("Deleting Test by id = {} from the DB", id);
+
         TestClass testClass = testClassRepository.findById(id).orElseThrow(
                 () -> new ResourceNotFoundException("Test", "id", id));
         testClassRepository.deleteById(id);
+
         return TestMapper.MAPPER.mapToTestDto(testClass);
     }
 
     @Override
-    public Page<TestClass> findAll(Pageable pageable, int pageNumber, int pageSize) {
-        return testClassRepository.findAll(PageRequest.of(pageNumber, pageSize));
+    public Page<TestDto> findAll(int pageNumber, int pageSize) {
+        log.info("Find all test with Pageable: page number {}, page size {}", pageNumber, pageSize);
+
+        Page<TestClass> pageResult = testClassRepository.findAll(PageRequest.of(pageNumber, pageSize));
+        List<TestDto> testDtoList = pageResult.getContent().stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(testDtoList, PageRequest.of(pageNumber, pageSize), pageResult.getTotalElements());
     }
 
     @Override
-    public List<TestClass> sortByOneFieldAsc(Sort sort) {
-        return testClassRepository.findAll(Sort.by(Sort.Direction.ASC));
+    public List<TestDto> sortByOneFieldAsc(Sort sort) {
+        log.info("Find all tests ASC using Sort");
+
+        return testClassRepository.findAll(Sort.by(Sort.Direction.ASC)).stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<TestClass> sortByOneFieldDesc(Sort sort) {
-        return testClassRepository.findAll(Sort.by(Sort.Direction.DESC));
+    public List<TestDto> sortByOneFieldDesc(Sort sort) {
+        log.info("Find all tests DESC using Sort");
+
+        return testClassRepository.findAll(Sort.by(Sort.Direction.DESC)).stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
 
     /*  Assuming that sort direction is coming from the Client
      *   sortDir = "asc" || sortDir="desc"*/
     @Override
-    public List<TestClass> sortByOneFieldDynamically(Sort sort, String fieldName, String sortDir) {
+    public List<TestDto> sortByOneFieldDynamically(Sort sort, String fieldName, String sortDir) {
+        log.info("Find all tests using Sort by one field dynamically");
 
         sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
                 ? Sort.by(fieldName).ascending() : Sort.by(fieldName).descending();
 
-        return testClassRepository.findAll(sort);
+        return testClassRepository.findAll(sort).stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
 
     /*  Assuming that sort direction is coming from the Client
      *   sortDir = "asc" || sortDir="desc"*/
     @Override
-    public List<TestClass> sortByTwoFields(Sort sort, String firstFieldName,
-                                           String secondFieldName, String sortDir) {
+    public List<TestDto> sortByTwoFields(String firstField, String secondField, String sortDir) {
+        log.info("Find all test using Sort by two fields dynamically");
 
         Sort sortByFirstField = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
-                ? Sort.by(firstFieldName).ascending() : Sort.by(firstFieldName).descending();
-
-        Sort sortBySecondField = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
-                ? Sort.by(secondFieldName).ascending() : Sort.by(secondFieldName).descending();
-
+                ? Sort.by(firstField).ascending() : Sort.by(firstField).descending();
+        Sort sortBySecondField = sortDir.equalsIgnoreCase(Sort.Direction.DESC.name())
+                ? Sort.by(secondField).ascending() : Sort.by(secondField).descending();
         Sort sortByFirstThenSecondField = sortByFirstField.and(sortBySecondField);
 
-        return testClassRepository.findAll(sortByFirstThenSecondField);
+        return testClassRepository.findAll(sortByFirstThenSecondField).stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<TestClass> paginateAndSortByOneFieldAsc(int pageNumber, int pageSize, Sort sort) {
+    public List<TestDto> paginateAndSortByOneFieldAsc(int pageNumber, int pageSize, String fieldName) {
+        log.info("Find all test using Sort by one field ASC, page number {} and page size {}", pageNumber, pageSize);
 
-        sort = Sort.by(Sort.Direction.ASC);
+        Sort sort = Sort.by(fieldName).ascending();
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
-        Page<TestClass> page = testClassRepository.findAll(pageable);
+        Page<TestClass> pageResult = testClassRepository.findAll(pageable);
 
-        return page.getContent();
+        return pageResult.getContent().stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<TestClass> paginateAndSortByOneFieldDesc(int pageNumber, int pageSize, Sort sort) {
+    public List<TestDto> paginateAndSortByOneFieldDesc(int pageNumber, int pageSize, String fieldName) {
+        log.info("Find all test using Sort by one field DESC, page number {}, page size {}", pageNumber, pageSize);
 
-        sort = Sort.by(Sort.Direction.DESC);
+        Sort sort = Sort.by(fieldName).descending();
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
-        Page<TestClass> page = testClassRepository.findAll(pageable);
+        Page<TestClass> pageResult = testClassRepository.findAll(pageable);
 
-        return page.getContent();
+        return pageResult.getContent().stream()
+                .map(TestMapper.MAPPER::mapToTestDto)
+                .collect(Collectors.toList());
     }
-
-
 }
